# pytest-gitconfig

./: .copier-answers.yml  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
src/pytest_gitconfig/: __init__.py  plugin.py
tests/: test_override_defaults.py  test_pytest_gitconfig.py
